objects/Bean_Game__c.object
<CustomObject>
    <fields>
        <fullName>Bean_Game_Created_Date__c</fullName>
        <label>Bean Game Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bean Games</relationshipLabel>
        <relationshipName>Bean_Games</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DryRunTime__c</fullName>
        <inlineHelpText>Be sure to record as minutes:seconds up to two decimal places. For example, 1 minute and 45.03 seconds would be entered as 1:45.03. If your score was less than a minute, please enter your score starting with 0: (e.g., 0:52.31)</inlineHelpText>
        <label>DryRunTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeftHand_1_ExerciseDrops__c</fullName>
        <label>LeftHand_1_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeftHand_1_ExerciseGoing__c</fullName>
        <label>LeftHand_1_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeftHand_1_ExerciseTime__c</fullName>
        <label>LeftHand_1_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeftHand_2_ExerciseDrops__c</fullName>
        <label>LeftHand_2_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeftHand_2_ExerciseGoing__c</fullName>
        <label>LeftHand_2_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeftHand_2_ExerciseTime__c</fullName>
        <label>LeftHand_2_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeftHand_3_ExerciseDrops__c</fullName>
        <label>LeftHand_3_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeftHand_3_ExerciseGoing__c</fullName>
        <label>LeftHand_3_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeftHand_3_ExerciseTime__c</fullName>
        <label>LeftHand_3_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Hand_Average__c</fullName>
        <formula>(
        VALUE(LEFT(LeftHand_1_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_1_ExerciseTime__c) - 1)) +
        VALUE(LEFT(LeftHand_2_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_2_ExerciseTime__c) - 1)) +
        VALUE(LEFT(LeftHand_3_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_3_ExerciseTime__c) - 1)) +
        VALUE(LEFT(LeftHand_4_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_4_ExerciseTime__c) - 1))
    )*60 / 4
+

    (
        VALUE(MID(LeftHand_1_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_1_ExerciseTime__c) + 1, LEN(LeftHand_1_ExerciseTime__c))) +
        VALUE(MID(LeftHand_2_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_2_ExerciseTime__c) + 1, LEN(LeftHand_2_ExerciseTime__c))) +
        VALUE(MID(LeftHand_3_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_3_ExerciseTime__c) + 1, LEN(LeftHand_3_ExerciseTime__c))) +
        VALUE(MID(LeftHand_4_ExerciseTime__c, FIND(&quot;:&quot;, LeftHand_4_ExerciseTime__c) + 1, LEN(LeftHand_4_ExerciseTime__c)))
    ) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Left Hand Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OneLastThing__c</fullName>
        <label>OneLastThing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I timed myself</fullName>
                </value>
                <value>
                    <fullName>Someone else timed me</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participant_Id__c</fullName>
        <label>Participant Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightHand_1_ExerciseDrops__c</fullName>
        <label>RightHand_1_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RightHand_1_ExerciseGoing__c</fullName>
        <label>RightHand_1_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RightHand_1_ExerciseTime__c</fullName>
        <label>RightHand_1_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightHand_2_ExerciseDrops__c</fullName>
        <label>RightHand_2_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RightHand_2_ExerciseGoing__c</fullName>
        <label>RightHand_2_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RightHand_2_ExerciseTime__c</fullName>
        <label>RightHand_2_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightHand_3_ExerciseDrops__c</fullName>
        <label>RightHand_3_ExerciseDrops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RightHand_3_ExerciseGoing__c</fullName>
        <label>RightHand_3_ExerciseGoing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, I forgot</fullName>
                </value>
                <value>
                    <fullName>No, I remembered the whole sequence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RightHand_3_ExerciseTime__c</fullName>
        <label>RightHand_3_ExerciseTime</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Hand_Average__c</fullName>
        <formula>(
VALUE(Left(RightHand_1_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_1_ExerciseTime__c) - 1)) +
VALUE(Left(RightHand_2_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_2_ExerciseTime__c) - 1)) +
VALUE(Left(RightHand_3_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_3_ExerciseTime__c) - 1)) +
VALUE(Left(RightHand_4_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_4_ExerciseTime__c) - 1))
)*60 / 4

+

(
VALUE(MID(RightHand_1_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_1_ExerciseTime__c) + 1, LEN(RightHand_1_ExerciseTime__c))) +
VALUE(MID(RightHand_2_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_2_ExerciseTime__c) + 1, LEN(RightHand_2_ExerciseTime__c))) +
VALUE(MID(RightHand_3_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_3_ExerciseTime__c) + 1, LEN(RightHand_3_ExerciseTime__c))) +
VALUE(MID(RightHand_4_ExerciseTime__c, FIND(&quot;:&quot;, RightHand_4_ExerciseTime__c) + 1, LEN(RightHand_4_ExerciseTime__c)))
) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right Hand Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bean Game</label>
    <nameField>
        <displayFormat>BGN-{00000000}</displayFormat>
        <label>Bean Game Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bean Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>